--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/jdmar3-comp426/a02-emenay.git"
   },
   "author": "",
-  "license": "SEE LICENSE IN LICENSE",
+  "license": "AGPL-3.0-only",
   "bugs": {
     "url": "https://github.com/jdmar3-comp426/a02-emenay/issues"
   },
